2003-09-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFTree.py: increment the count properly

2003-09-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EventEditor.py: Fix destroy window callback
	* src/dialog.glade: removed unused callbacks

2003-09-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Update Russian translation. 
	* doc/gramps-manual/C/gramps-manual.xml: Update manual.
	* doc/gramps-manual/C/filtref.xml: Add file -- split appendix 
	into a separate file.
	* doc/gramps-manual/C/cmdline.xml: Likewise.
	* doc/gramps-manual/C/getstart.xml: Likewise.
	* doc/gramps-manual/C/mainwin.xml: Likewise.
	* doc/gramps-manual/C/usage.xml: Likewise.
	* doc/gramps-manual/C/custom.xml: Likewise.
	* doc/gramps-manual/C/Makefile.am: Ship new files. 
	* doc/gramps-manual/C/Makefile.in: Likewise. 
	* src/latin_utf8.py (latin_to_utf8): Convert to unicode only if needed. 
	* doc/gramps-manual/C/figures/cfe-ar.png: Add figure. 
	* doc/gramps-manual/C/figures/bookreport.png: Update figure. 
	* doc/gramps-manual/C/figures/gedcom-export.png: Likewise. 
	* doc/gramps-manual/C/figures/first-open.png: Likewise. 
	* doc/gramps-manual/C/figures/mainwin.png: Likewise. 
	* doc/gramps-manual/C/figures/side-filt.png: Likewise. 
	* doc/gramps-manual/C/figures/sources.png: Likewise. 
	* doc/gramps-manual/C/figures/media.png: Likewise. 

2003-09-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/book.glade: Minor improvements to the dialogs. 
	* doc/gramps-manual/C/gramps-manual.xml: Update manual.

2003-09-21  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddrEdit.py: Fixed OK button callback

2003-09-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: pass list of filtered people to find dialog
	* src/Find.py: pass list of filtered people to find dialog
	* src/po/hu.po: set character set to ISO-8859-2, fix typo
	* src/Date.py: Reset date if a empty text string is passed
